# vLLM-metax

./: .pre-commit-config.yaml  404.html  CMakeLists.txt  MANIFEST.in  NOTICE  README.md  README2.md  env.sh  index.html  objects.inv  pyproject.toml  setup.py  sitecustomize.py  use_existing_metax.py  use_existing_torch.py
.github/workflows/: daily_tests.yaml  vllm_metax_tests.yaml
.modelpath/: all.json  cicd.json  test.json  unit_test.json
cmake/: utils.cmake
csrc/: activation_kernels.cu  cache.h  cache_kernels.cu  concat_mla_q.cuh  cub_helpers.h  cuda_compat.h  cuda_utils.h  cuda_utils_kernels.cu  cuda_vec_utils.cuh  cuda_view.cu  cumem_allocator.cpp  custom_add_kernels.cu  custom_all_reduce.cu  custom_all_reduce_test.cu  custom_gemm_kernels.cu  dispatch_utils.h  fused_deepseek_v4_qnorm_rope_kv_insert_kernel_bf16.cu  fused_qknorm_rope_kernel.cu  layernorm_kernels.cu  layernorm_quant_kernels.cu  ops.h  permute_cols.cu  persistent_topk.cuh  pos_encoding_kernels.cu  sampler.cu  torch_bindings.cpp  type_convert.cuh
csrc/attention/: attention_dtypes.h  attention_generic.cuh  attention_kernels.cuh  attention_utils.cuh  dtype_bfloat16.cuh  dtype_float16.cuh  dtype_float32.cuh  dtype_fp8.cuh  merge_attn_states.cu  paged_attention_v1.cu  paged_attention_v2.cu  vertical_slash_index.cu
csrc/core/: batch_invariant.hpp  exception.hpp  math.hpp  registration.h  scalar_type.hpp
csrc/cutlass_extensions/: common.cpp  common.hpp  cute_utils.cuh  torch_utils.hpp  vllm_collective_builder.cuh  vllm_custom_types.cuh  vllm_cutlass_library_extension.py  vllm_numeric_conversion.cuh  vllm_type_utils.cuh
csrc/libtorch_stable/: async_util.cuh  cache_kernels.cu  cache_kernels_fused.cu  cuda_vec_utils.cuh  fused_deepseek_v4_qnorm_rope_kv_insert_kernel_bf16.cu  fused_minimax_m3_qknorm_rope_kv_insert_kernel.cu  minimax_reduce_rms_kernel.cu  persistent_topk.cuh  topk_histogram_4096.cuh  torch_bindings.cpp
csrc/moe/: grouped_topk_kernels.cu  marlin_moe_ops.cu  moeTopKFuncs.cuh  moe_align_sum_kernels.cu  moe_ops.cpp  moe_ops.h  moe_permute_unpermute_op.cu  moe_wna16.cu  moe_wna16_utils.h  topk_softmax_kernels.cu  topk_softplus_sqrt_kernels.cu  torch_bindings.cpp
csrc/prepare_inputs/: advance_step.cu  advance_step.cuh
csrc/quantization/: activation_kernels.cu  utils.cuh  vectorization.cuh  vectorization_utils.cuh
docker/: build_cpu_image.sh  build_image.sh  rhsm.env  vllm-cpu.Dockerfile  vllm_metax.Dockerfile  vllm_ubi9_building_instructions.md
docs/developing/: README.md
docs/drafts/: supported_models.md
docs/getting_started/: quickstart.md
docs/models/: [Model Validation]QWenLMHeadModel_Qwen.md  supported_models.md  text_only_text_gen.py  verify_Qwen_Qwen7B.py  verify_nie3e_sentiment-polish-gpt2-small.py
getting_started/: quickstart.html
getting_started/installation/: MACA.html  index.html
requirements/: build.txt  common.txt  docs.txt  kv_connectors.txt  maca.txt  maca_private.txt  test.txt
search/: search_index.json
tests/: conftest.py  test_collect_env_compiler.py  test_collect_env_json.py  test_collect_env_maca.py  test_collect_env_maca_home.py  test_env_bool_parser.py  test_env_sh_paths.sh  test_lmcache_offloading.py  test_preflight.py  test_setup_maca_gate.py  test_setup_maca_version.py  utils.py
tests/kernels/: quant_utils.py  test_fused_quant_activation.py  utils.py
tests/models/: registry.py  utils.py
tests/patch/: test_moe_wna16_compat.py  test_speculative_decode_perf.py  test_triton_custom_op_schemas.py
tests/tools/: test_generate_cmake_presets.py  test_generate_cmake_presets_build_type.py  test_generate_cmake_presets_cudacxx.py  test_generate_cmake_presets_jobs.py  test_generate_cmake_presets_no_prompt.py  test_generate_cmake_presets_output.py  test_generate_cmake_presets_validate_compiler.py
tools/: generate_cmake_presets.py  maca_env_diff.py  model_resource_plan.py  server_log_summary.py
tools/batched_test/: README.md  api_client.py  gpu_manager.py  launch.py  machine_config.py  model.yaml  model_jiajia.yaml  model_worker.py  net_utils.py  ray_cluster.py  ray_manager.py  recipy.yaml  schedular.py
vllm_metax/: __init__.py  _custom_ops.py  _dummy_ops.py  collect_env.py  compat.py  env_override.py  envs.py  platform.py  preflight.py  version.py
vllm_metax/attention/: __init__.py  layer.py  selector.py
vllm_metax/config/: __init__.py
vllm_metax/customized/: deepseek_compressor.py
vllm_metax/device_allocator/: cumem.py
vllm_metax/distributed/: __init__.py  parallel_state.py
vllm_metax/engine/: arg_utils.py
vllm_metax/hotfix/: fix_aux_stream.py  fix_compilation_backend.py  fix_cudagraph_sizes.py  fix_standalone_compile.py  support_ds_32.patch
vllm_metax/lora/: __init__.py  punica_maca.py
vllm_metax/model_executor/: __init__.py
vllm_metax/models/: __init__.py  baichuan.py  baichuan_moe.py  deepseek.py  deepseek_mtp.py  deepseek_v2.py  deepseek_v4.py  deepseek_v4_mtp.py  ernie45.py  fm9g.py  fm9g7b.py  glm4_1v.py  intern_vit.py  internvl.py  kimi_k25.py  kimi_linear.py  minimax_m2.py  qwen2_5_vl.py  qwen2_vl.py  qwen3_5.py  qwen3_5_mtp.py  qwen3_asr.py  qwen3_moe.py  qwen3_next.py  qwen3_vl.py  qwen3_vl_moe.py  step3p5_mtp.py
vllm_metax/ops/: __init__.py  activation.py  apply_rotary_embedding.py  fused_moe.py  layernorm.py  mm_encoder_attention.py  rotary_embedding.py  unquantized_fused_moe_method.py
vllm_metax/patch/: __init__.py  fa_utils.py  maca_visible_device.py
vllm_metax/quant_config/: __init__.py  awq.py  awq_marlin.py  compressed_tensors.py  compressed_tensors_moe.py  exllama.py  gptq.py  gptq_marlin.py  moe_wna16.py
vllm_metax/utils/: __init__.py  deep_gemm.py  fused_moe.py  mccl.py  moe_config.py
vllm_metax_plugin/: __init__.py  _custom_ops.py  config.py  envs.py  platform.py  version.py
vllm_metax_plugin/attention/: layer.py
vllm_metax_plugin/device_allocator/: cumem.py
vllm_metax_plugin/distributed/: parallel_state.py
vllm_metax_plugin/models/: __init__.py  baichuan.py  baichuan_moe.py  deepseek_v2.py  mimo.py  mimo_mtp.py  qwen3.py  qwen3_moe.py
vllm_metax_plugin/patch/: __init__.py  hook_deferred.py  (+3 more)
(+629 files in other folders)
