[build-system]
# Should be mirrored in requirements/build.txt
requires = [
    "cmake>=3.26.1",
    "ninja",
    "packaging>=24.2",
    "setuptools>=77.0.3,<81.0.0",
    "setuptools-scm>=8.0",
    "torch==2.8.0+metax3.5.3.9",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"

[project]
name = "vllm_metax"
authors = [{name = "Metax Team"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
description = "vLLM Metax backend plugin"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9,<3.13"
dynamic = [ "version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage="https://github.com/MetaX-MACA/vLLM-metax"

[project.scripts]
vllm_collect_env = "vllm_metax:collect_env"

[project.entry-points."vllm.platform_plugins"]
metax = "vllm_metax:register"

[project.entry-points."vllm.general_plugins"]
metax_enhanced_customized = "vllm_metax:register_customized"
metax_enhanced_model = "vllm_metax:register_model"

[tool.setuptools_scm]
# no extra settings needed, presence enables setuptools-scm

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_metax*"]

[tool.ruff]
# Note: all these are maintained by vllm
exclude = [
"examples",
"tests",
"vllm_metax/third_party",
"vllm_metax/models"
]

[tool.ruff.lint.per-file-ignores]
"vllm_metax/platform.py" = ["ALL"]
"vllm_metax/version.py" = ["ALL"]
"vllm_metax/_version.py" = ["ALL"]
"vllm_metax/v1/**" = ["ALL"]
"vllm_metax/csrc/**" = ["ALL"]
"vllm_metax/patch/**" = ["ALL"]
"vllm_metax/hotfix/**" = ["ALL"]
"vllm_metax/models/**" = ["ALL"]
"tools/**" = ["ALL"]
"setup.py" = ["G004"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    # flake8-logging-format
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    "E501",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"

[tool.pytest.ini_options]
markers = [
    "slow_test",
    "skip_global_cleanup",
    "core_model: enable this model test in each PR instead of only nightly",
    "hybrid_model: models that contain mamba layers (including pure SSM and hybrid architectures)",
    "cpu_model: enable this model test in CPU tests",
    "cpu_test: mark test as CPU-only test",
    "split: run this test as part of a split",
    "distributed: run this test only in distributed GPU tests",
    "optional: optional tests that are automatically skipped, include --optional to run them",
]

[tool.ty.src]
root = "./vllm_metax"
respect-ignore-files = true

[tool.ty.environment]
python = "./.venv"

[tool.typos.files]
# these files may be written in non english words
extend-exclude = ["tests/models/fixtures/*", "tests/prompts/*", "tests/tokenizers_/*",
    "benchmarks/sonnet.txt", "tests/lora/data/*", "build/*",
    "examples/pooling/token_embed/*", "tests/models/language/pooling/*",
    "vllm/third_party/*", "vllm/entrypoints/serve/instrumentator/static/*", "tests/entrypoints/openai/speech_to_text/test_transcription_validation.py",
    "docs/governance/process.md", "tests/v1/engine/test_fast_incdec_prefix_err.py", ".git/*"]
ignore-hidden = false

[tool.typos.default]
extend-ignore-identifiers-re = [".*[Uu][Ee][0-9][Mm][0-9].*"]

[tool.typos.default.extend-identifiers]
bbc5b7ede = "bbc5b7ede"
NOOPs = "NOOPs"
nin_shortcut = "nin_shortcut"
cudaDevAttrMaxSharedMemoryPerBlockOptin = "cudaDevAttrMaxSharedMemoryPerBlockOptin"

depthwise_seperable_out_channel = "depthwise_seperable_out_channel"
pard_token = "pard_token"
ptd_token_id = "ptd_token_id"
ser_de = "ser_de"
shared_memory_per_block_optin = "shared_memory_per_block_optin"
FoPE = "FoPE"
k_ot = "k_ot"
view_seperator = "view_seperator"
inverse_std_variences = "inverse_std_variences"

[tool.typos.default.extend-words]
iy = "iy"
indx = "indx"
# intel cpu features
tme = "tme"
dout = "dout"
Pn = "Pn"
arange = "arange"
thw = "thw"
subtile = "subtile"
HSA = "HSA"
setp = "setp"
CPY = "CPY"
thr = "thr"
Thr = "Thr"
PARD = "PARD"
pard = "pard"
AKS = "AKS"
ba = "ba"
fo = "fo"
nd = "nd"
eles = "eles"
datas = "datas"
ser = "ser"
ure = "ure"
VALU = "VALU"
# Walsh-Hadamard Transform
wht = "wht"
WHT = "WHT"

[tool.uv]
no-build-isolation-package = ["torch"]